<resources>
    <!-- Shared Preferences (no traducir) -->
    <string name="sharedPreferencesName">savedLoginData</string>
    <string name="sharedPreferencesCliente">cliente</string>
    <string name="sharedPreferencesMusic">isMusicOn</string>

    <string name="app_name">Penny Pan</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordCheck">Re-enter your password</string>
    <string name="login">LOG IN</string>
    <string name="remember">Remember me</string>
    <string name="createAccount">Or create a new account</string>
    <string name="register">CREATE ACCOUNT</string>
    <string name="newUser">New user</string>
    <string name="regSubtitle">Welcome to the new bread experience!</string>
    <string name="errorEmptyName">The name can\'t be empty!</string>
    <string name="errorInvalidName">Invalid name, get a better one!</string>
    <string name="errorEmptyUsername">The username can\'t be empty!</string>
    <string name="errorInvalidUsername">Invalid username! Only alphanumeric</string>
    <string name="errorTakenUsername">That username is already taken!</string>
    <string name="errorEmptyPassword">The password can\'t be empty!</string>
    <string name="errorInvalidPassword">Invalid password! At least 8 characters long</string>
    <string name="errorCheckPassword">The passwords don\'t match!</string>
    <string name="errorLogIn">Invalid username or password</string>
    <string name="unexpectedLoginError">We couldn\'t load your data for unknown reasons :(</string>
    <string name="registerSuccessful">You registered successfully</string>
    <string name="registerUnsuccessful">We couldn\'t register you for unknown reasons :(</string>
    <string name="nani">Nani??</string>

    <string name="loading">Loading</string>
    <string name="unauthorized">Sorry, you took too long to decide. Logging you off!</string>

    <!-- Strings de register -->
    <string name="registered">Registered</string>
    <string name="error">Error</string>

    <!-- Strings de iconos -->
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="market">Market</string>
    <string name="settings">Settings</string>

    <!-- Strings de Loading -->
    <string name="loadingOrders">Loading your orders</string>
    <string name="loadingBread">Loading bread</string>
    <string name="loadingMiscellaneous">Loading miscellaneous</string>
    <string name="loadingIngredients">Loading ingredients</string>
    <string name="loadingSplines">Reticulating splines</string>
    <string name="loadingClients">Loading chunks</string>

    <!-- Strings de Home -->
    <string name="welcome">Welcome to PennyPan,\n %1$s</string>
    <string name="homeOrder">This is your last order:</string>
    <string name="homeNoOrders">To start buying, click on the Market icon</string>
    <string name="homeSales">These items are on sale today:</string>
    <string name="homeLastOrder">This was your last order:</string>

    <!-- Strings de Orders -->
    <string name="tapExpand">Tap to expand details</string>
    <string name="tapCollapse">Tap to collapse details</string>
    <string name="orderNumber">Order Nº %1$d</string>
    <string name="noOrders">Looks like you have no orders!</string>
    <string name="orderPrice">EUR %1$.2f</string>
    <string name="bread">Bread</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="sandwich">Sandwiches</string>

    <!-- Strings de Market -->
    <string-array name="motd">
        <item>Feeling thirsty today?</item>
        <item>Up for a healthy sandwich?</item>
        <item>You deserve a snack</item>
        <item>A moment to yourself</item>
        <item>PennyPan to serve you</item>
        <item>Delicious alternatives</item>
        <item>Freshly baked every day. All day!</item>
        <item>I can stop when I want</item>
        <item>Reticulating splines…</item>
        <item>Try our Nachos!</item>
        <item>Man cannot live on bread alone</item>
        <item>Oreo. Milk\'s favourite cookie</item>
        <item>So sweet. So good.</item>
        <item>Preparing a tasty grilled cheese sandwich</item>
        <item>A PennyPan for your thoughts ;)</item>
        <item>Not sponsored by Coca-Cola. Buy one, though</item>
        <item>My body is telling me no. But my mouth is telling me yes.</item>
        <item>Sponsored by Ruafa</item>
        <item>The better Polvillo</item>
        <item>Polvillo\'s favourite enemy</item>
        <item>Error 418</item>
        <item>Feat. Tasty Kahuna Burgers</item>
        <item></item>
    </string-array>
    <string name="sandwichBreadTitle">Select your sandwich\'s bread</string>
    <string name="sandwichIngredientsTitle">Select the ingredients</string>
    <string name="sandwichDialogBreadTitle">Select this bread?</string>
    <string name="sandwichDialogBreadContent">You will be able to change it once you have selected it by going back to this window</string>
    <string name="sandwichDialogBreadAffirmative">Accept</string>
    <string name="sandwichDialogBreadNegative">Cancel</string>
    <string name="sandwichErrorNoIngredients">You can\'t make a sandwich out of bread alone!</string>
    <string name="sandwichErrorNoBread">You can\'t make a sandwich without bread!</string>
    <string name="sandwichErrorNothing">Do you even want a sandwich? 🤔🤔🤔</string>
    <string name="sandwichFinalQuestionTitle">This will be your sandwich</string>
    <string name="sandwichFinalQuestionAffirmative">Love it!</string>
    <string name="sandwichFinalQuestionNegative">Hate it</string>

    <string name="sandwichFinishIngredients">Finish Sandwich</string>

    <string name="dialogExitSandwichCreationTitle">Are you sure you want to lose this sandwich?</string>
    <string name="dialogExitSandwichCreationContent">If you exit now, you will lose all progress on this sandwich and it will not be added to your cart</string>
    <string name="dialogExitSandwichCreationAffirmative">Exit</string>
    <string name="dialogExitSandwichCreationNegative">Stay</string>

    <!-- Strings de Cart -->
    <string name="deleteItemHeader">Delete this product?</string>
    <string name="deleteItemContent">You will have to re-add it to your shopping cart from the Market tab</string>
    <string name="deleteItemAffirmative">Delete</string>
    <string name="deleteItemCancel">Cancel</string>
    <string name="emptyCart">Looks like your cart is empty!</string>
    <string name="cartTotal">Total:</string>
    <string name="choosePaymentMethod">Choose your payment method</string>
    <string name="finishOrder">Finish Order</string>
    <string name="finishOrderDialogTitle">Are you happy with your order?</string>
    <string name="finishOrderDialogContent">You will not be able to change it once the order has been placed</string>
    <string name="finishOrderDialogAffirmative">Yes!</string>
    <string name="finishOrderDialogNegative">Nope</string>
    <string name="postOrderLoading">Saving your order…</string>
    <string name="postOrderOKDialogTitle">Success!</string>
    <string name="postOrderOKDialogContent">Your order has been placed correctly</string>
    <string name="postOrderOKDialogAffirmative">Alright!</string>
    <string name="postOrderNotOKDialogTitle">Something went wrong</string>
    <string name="postOrderNotOKDialogContent">For some unknown reason, we could not place your order correctly</string>
    <string name="postOrderNotOKDialogAffirmative">:(</string>

    <!-- Strings de Settings -->
    <string name="settingsAdminCategory">Admin</string>
    <string name="settingsHireWorkersTitle">Hire bakers</string>
    <string name="settingsHireWorkersDescription">Hire registered users to work at your bakery</string>
    <string name="settingsFireWorkersTitle">Fire bakers</string>
    <string name="settingsFireWorkersDescription">Fire registered users to not work at your bakery anymore</string>
    <string name="settingsMusicCategory">Music</string>
    <string name="settingsMusicOnTitle">Turn music on</string>
    <string name="settingsMusicOnDescription">Turn the in-store ambient music on</string>
    <string name="settingsMusicVolumeTitle">Music volume</string>
    <string name="settingsSignOffTitle">Log off</string>
    <string name="settingsAccountCategory">Account</string>
    <string name="signoffDialogTitle">Are you sure you want to sign off?</string>
    <string name="signoffDialogContent">You will lose everything you have in the cart right now.</string>
    <string name="signoffDialogAffirmative">I\'m sure</string>
    <string name="signoffDialogNegative">Nevermind</string>
    <string name="bugReportTitle">Report a bug</string>
    <string name="bugReportDescription">Please tell us about it</string>
    <string name="noWay">No way I\'m doing this</string>
    <string name="bugReportEmailSubject">Bug Report</string>
    <string name="bugReportEmailText">Tell us what happened</string>

</resources>
