<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Music">
        <SwitchPreferenceCompat
            android:key="musicToggle"
            android:title="@string/settingsMusicOnTitle"
            android:summary="@string/settingsMusicOnDescription"
            android:icon="@drawable/icon_music"
            android:defaultValue="true"/>

        <SeekBarPreference
            android:key="musicVolume"
            android:title="@string/settingsMusicVolumeTitle"
            android:clickable="false"
            android:focusable="false"/>
    </PreferenceCategory>


    <Preference
        android:key="bugReport"
        android:title="@string/bugReportTitle"
        android:icon="@drawable/icon_bug"/>

    <Preference
        android:key="signoff"
        android:title="@string/settingsSignOffTitle"
        android:icon="@drawable/icon_exit"/>


</PreferenceScreen>